# cursor-light

./: .gitignore  README.md  package-lock.json  package.json
.cursor/: hooks.json.example
hooks/: cursor-hook.js
scripts/: copy-tauri-release.js  generate-icon.js
src/: main.js  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/renderer/: index.html  renderer.js  styles.css
