[package]
name = "cursor-light"
version = "0.1.0"
description = "Desktop traffic light panel for Cursor hook events."
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
